--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>I am Blanca Pengson</h1>
-    
+    <p>Commands used in Github</p>
+    <p>git add .</p>
+    <p>git commit -m "Initial commit"</p>
+    <p>git push</p>
 </body>
 </html>
